--- a/python/ray/rllib/tuned_examples/pendulum-ppo.yaml
+++ b/python/ray/rllib/tuned_examples/pendulum-ppo.yaml
@@ -12,6 +12,6 @@ pendulum-ppo:
         sgd_batchsize: 64
         num_sgd_iter: 10
         horizon: 200
-        gae: false
+        use_gae: false
         model:
             fcnet_hiddens: [64, 64]
