--- a/python/ray/rllib/tuned_examples/test.yaml
+++ b/python/ray/rllib/tuned_examples/test.yaml
@@ -1,23 +1,25 @@
-MsPacman:
+Alien:
     env: Alien-v0
     run: FEUDAL
     stop: {"training_iteration": 250}
     trial_resources:
         cpu: 1
         gpu: 0
-        extra_cpu: 49
+        extra_cpu: 1
     upload_dir: "s3://bucketlearningtraffic/Feudal"
     checkpoint_freq: 1
     repeat: 1
     config:
+      LSTM_OR_NOT: False
+      separate_VF_approximator: True
       ES: False
       noise_stdev: 0.1
       alpha: 0.01
       gamma: 0.99
       gamma_internal: 0.95
-      #"sgd_stepsize": np.exp(np.random.uniform(10**(-4.5), 10**(-3.5))),
-      #"entropy_coefficient": np.exp(np.random.uniform(10**(-4), 10**(-3))),
-      #"tradeoff_rewards": np.random.uniform(0, 1),
+      sgd_stepsize: 1e-3
+      entropy_coeff: 0
+      tradeoff_rewards: 0.5
       horizon: 2000
       use_gae: True
       lambda: 0.97
@@ -25,12 +27,12 @@ MsPacman:
       g_dim: 256
       kappa: 1.0
       k: 16
-      vf_hidden_size: 256
+      vf_hidden_size: [256, 64]
       c: 10
       dilatation_rate: 10
       units_z: 256
-      num_workers: 50
-      timesteps_per_batch: 100000
+      num_workers: 2
+      timesteps_per_batch: 4000
       sgd_batchsize: 1024
       vf_loss_coeff_manager: 1.0
       vf_loss_coeff_worker: 1.0
