--- a/python/ray/rllib/tuned_examples/autoscale.yaml
+++ b/python/ray/rllib/tuned_examples/autoscale.yaml
@@ -1,7 +1,7 @@
 # cluster.yaml =========================================
 
 # An unique identifier for the head node and workers of this cluster.
-cluster_name: lucleflem-FEUDAL #<YOUR NAME>
+cluster_name: lucleflem-FEUDAL_ES #<YOUR NAME>
 
 # The minimum number of workers nodes to launch in addition to the head
 # node. This number should be >= 0.
