--- a/python/ray/rllib/tuned_examples/test.yaml
+++ b/python/ray/rllib/tuned_examples/test.yaml
@@ -12,18 +12,17 @@ MsPacman:
     config:
       separate_VF_approximator: True
       LSTM_OR_NOT: True
-      ES: False
+      ES: True
       noise_stdev: 0.1
       alpha: 0.01
       gamma: 0.99
       gamma_internal: 0.95
-      sgd_stepsize:
+      sgd_stepsize: 0.0001
       entropy_coeff: 0
       tradeoff_rewards: 0.5
       horizon: 2000
       use_gae: True
       lambda: 0.97
-      lambda_internal: 0.97
       g_dim: 256
       kappa: 1.0
       k: 16
@@ -39,3 +38,4 @@ MsPacman:
       min_steps_per_task: 200
       num_sgd_iter: 30
       observation_filter: "NoFilter"
+
