--- a/python/ray/rllib/tuned_examples/test.yaml
+++ b/python/ray/rllib/tuned_examples/test.yaml
@@ -5,16 +5,16 @@ MsPacman:
     trial_resources:
         cpu: 1
         gpu: 0
-        extra_cpu: 1
+        extra_cpu: 0
     upload_dir: "s3://bucketlearningtraffic/Feudal"
     checkpoint_freq: 1
     repeat: 1
     config:
       separate_VF_approximator: True
-      LSTM_OR_NOT: True
+      LSTM_OR_NOT: False
       ES: True
       noise_stdev: 0.1
-      alpha: 0.01
+      alpha: 0.001
       gamma: 0.99
       gamma_internal: 0.95
       sgd_stepsize: 0.0001
@@ -30,7 +30,7 @@ MsPacman:
       c: 10
       dilatation_rate: 10
       units_z: 256
-      num_workers: 2
+      num_workers: 1
       timesteps_per_batch: 4000
       sgd_batchsize: 1024
       vf_loss_coeff_manager: 1.0
