--- a/python/ray/rllib/tuned_examples/test.yaml
+++ b/python/ray/rllib/tuned_examples/test.yaml
@@ -5,19 +5,19 @@ MsPacman:
     trial_resources:
         cpu: 1
         gpu: 0
-        extra_cpu: 24
-    upload_dir: "s3://bucketlearningtraffic/Feudal/LSTM_ES_alphae-3LRe-5"
+        extra_cpu: 1
+    upload_dir: "s3://bucketlearningtraffic/Feudal/LSTM_ES_alphae-3LR1H1"
     checkpoint_freq: 1
     repeat: 1
     config:
       separate_VF_approximator: True
       LSTM_OR_NOT: False
-      ES: True
+      ES: False
       noise_stdev: 0.1
       alpha: 0.001
       gamma: 0.99
       gamma_internal: 0.95
-      sgd_stepsize: 1.0
+      sgd_stepsize: 0.001
       entropy_coeff: 1.0
       tradeoff_rewards: 0.5
       horizon: 2000
@@ -30,12 +30,12 @@ MsPacman:
       c: 10
       dilatation_rate: 10
       units_z: 256
-      num_workers: 25
-      timesteps_per_batch: 100000
+      num_workers: 2
+      timesteps_per_batch: 4000
       sgd_batchsize: 1024
       vf_loss_coeff_manager: 1.0
       vf_loss_coeff_worker: 1.0
       min_steps_per_task: 200
       num_sgd_iter: 20
-      observation_filter: "MeanStdFilter"
+      observation_filter: "NoFilter"
       epsilon: 0.05
