--- a/python/ray/rllib/tuned_examples/hopper-ppo.yaml
+++ b/python/ray/rllib/tuned_examples/hopper-ppo.yaml
@@ -1,8 +1,25 @@
 hopper-ppo:
-    env: Hopper-v1
+    env: Ant-v2
     run: PPO
+    stop: {"training_iteration": 10000}
     trial_resources:
         cpu: 1
-        gpu: 4
-        extra_cpu: 63
-    config: {"gamma": 0.995, "kl_coeff": 1.0, "num_sgd_iter": 20, "sgd_stepsize": .0001, "sgd_batchsize": 32768, "devices": ["/gpu:0", "/gpu:1", "/gpu:2", "/gpu:3"], "tf_session_args": {"device_count": {"GPU": 4}, "log_device_placement": false, "allow_soft_placement": true}, "timesteps_per_batch": 160000, "num_workers": 64}
+        gpu: 0
+        extra_cpu: 3
+    upload_dir: "s3://bucketlearningtraffic/TEST_PPO/HalfCheetah"
+    config:
+      horizon: 2048
+      sgd_stepsize: 0.0003
+      gamma: 0.99
+      lambda: 0.95
+      kl_coeff: 0
+      num_sgd_iter: 10
+      sgd_batchsize: 64
+      num_workers: 4
+      timesteps_per_batch: 8192
+      vf_loss_coeff: 1.0
+      entropy_coeff: 0.000000001
+      clip_param: 0.2
+      hiddens_vf: [64, 64]
+      hiddens_policy: [64, 64]
+      ADB: False
