--- a/python/ray/rllib/tuned_examples/mujoco_tests/Ant-ADB.yaml
+++ b/python/ray/rllib/tuned_examples/mujoco_tests/Ant-ADB.yaml
@@ -1,14 +1,14 @@
-Hopper:
-    env: Hopper-v2
+Ant-ADB:
+    env: Ant-v2
     run: PPO
     repeat: 3
     stop: {"training_iteration": 300}
-        trial_resources:
+    trial_resources:
         cpu: 1
         gpu: 0
         extra_cpu: 3
     config:
-        ADB: False
+        ADB: True
         horizon: 2048
         gamma: 0.99
         lambda: 0.95
