--- a/python/ray/rllib/tuned_examples/mujoco_tests/InvertedPendulum.yaml
+++ b/python/ray/rllib/tuned_examples/mujoco_tests/InvertedPendulum.yaml
@@ -2,6 +2,7 @@ InvertedPendulum:
     env: InvertedPendulum-v2
     run: PPO
     repeat: 3
+    checkpoint_freq: 25
     stop: {"training_iteration": 300}
     trial_resources:
         cpu: 1
