--- a/python/ray/rllib/tuned_examples/mujoco_tests/HalfCheetah-ADB.yaml
+++ b/python/ray/rllib/tuned_examples/mujoco_tests/HalfCheetah-ADB.yaml
@@ -2,8 +2,9 @@ HalfCheetah-ADB:
     env: HalfCheetah-v2
     run: PPO
     repeat: 3
+    checkpoint_freq: 25
     stop: {"training_iteration": 300}
-        trial_resources:
+    trial_resources:
         cpu: 1
         gpu: 0
         extra_cpu: 3
