--- a/python/ray/rllib/tuned_examples/mujoco_tests/HalfCheetah.yaml
+++ b/python/ray/rllib/tuned_examples/mujoco_tests/HalfCheetah.yaml
@@ -2,6 +2,7 @@ HalfCheetah:
     env: HalfCheetah-v2
     run: PPO
     repeat: 3
+    checkpoint_freq: 25
     stop: {"training_iteration": 300}
     trial_resources:
         cpu: 1
