--- a/python/ray/rllib/tuned_examples/mujoco_tests/Humanoid.yaml
+++ b/python/ray/rllib/tuned_examples/mujoco_tests/Humanoid.yaml
@@ -1,23 +1,24 @@
-Reacher_withADB:
-    env: Alien-v0
-    #env: Reacher-v2 
-    run: ES
-    checkpoint_freq: 1
+Humanoid:
+    env: Humanoid-v2
+    run: PPO
+    repeat: 3
+    checkpoint_freq: 25
+    stop: {"training_iteration": 300}
     trial_resources:
         cpu: 1
         gpu: 0
         extra_cpu: 3
     config:
+        ADB: False
         horizon: 2048
         gamma: 0.99
         lambda: 0.95
         kl_coeff: 0
         entropy_coeff: 0
-        manager_vf_loss_coeff: 1.0
-        worker_vf_loss_coeff: 1.0
+        vf_loss_coeff: 1.0
         num_sgd_iter: 10
         sgd_stepsize: 0.0003
-        sgd_batchsize: 1024
+        sgd_batchsize: 64
         timesteps_per_batch: 8142
         num_workers: 3
         clip_param: 0.2
