--- a/python/ray/rllib/tuned_examples/mujoco_tests/Swimmer.yaml
+++ b/python/ray/rllib/tuned_examples/mujoco_tests/Swimmer.yaml
@@ -2,6 +2,7 @@ Swimmer:
     env: Swimmer-v2
     run: PPO
     repeat: 3
+    checkpoint_freq: 25
     stop: {"training_iteration": 300}
     trial_resources:
         cpu: 1
