different step_size

--- a/python/ray/rllib/tuned_examples/PPO_tests/mujoco_tests/HalfCheetah.yaml
+++ b/python/ray/rllib/tuned_examples/PPO_tests/mujoco_tests/HalfCheetah.yaml
@@ -18,7 +18,8 @@ HalfCheetah:
         vf_loss_coeff: 1.0
         num_sgd_iter_policy: 10
         num_sgd_iter_vf: 10
-        sgd_stepsize: 0.0003
+        sgd_stepsize_policy: 0.0003
+        sgd_stepsize_vf: 0.0003
         sgd_batchsize: 64
         timesteps_per_batch_policy: 8142
         timesteps_per_batch_vf: 8142
