--- a/python/ray/rllib/tuned_examples/PPO_tests/mujoco_tests/Hopper.yaml
+++ b/python/ray/rllib/tuned_examples/PPO_tests/mujoco_tests/Hopper.yaml
@@ -1,7 +1,9 @@
 Hopper:
     env: Hopper-v2
     run: PPO
-    stop: {"training_iteration": 150}
+    repeat: 3
+    checkpoint_freq: 5
+    stop: {"training_iteration": 300}
     trial_resources:
         cpu: 1
         gpu: 0
@@ -14,10 +16,13 @@ Hopper:
         kl_coeff: 0
         entropy_coeff: 0
         vf_loss_coeff: 1.0
-        num_sgd_iter: 10
-        sgd_stepsize: 0.0003
+        num_sgd_iter_policy: 10
+        num_sgd_iter_vf: 30
+        sgd_stepsize_policy: 0.0003
+        sgd_stepsize_vf: 0.0003
         sgd_batchsize: 64
-        timesteps_per_batch: 8142
+        timesteps_per_batch_policy: 8142
+        timesteps_per_batch_vf: 8142
         num_workers: 3
         clip_param: 0.2
         use_gae: True
