--- a/python/ray/rllib/tuned_examples/Ant_ADB-ppo.yaml
+++ b/python/ray/rllib/tuned_examples/Ant_ADB-ppo.yaml
@@ -1,5 +1,5 @@
 Hopper:
-    env: Hopper-v2
+    env: Ant-v2
     run: PPO
     repeat: 3
     checkpoint_freq: 5
@@ -9,7 +9,7 @@ Hopper:
         gpu: 0
         extra_cpu: 59
     config:
-        ADB: False
+        ADB: True
         horizon: 2048
         gamma: 0.99
         lambda: 0.95
